--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input id="q" type="search" placeholder="ค้นหาชื่อหรือรหัสนักศึกษา (UI อย่างเดียว)" />
       </label>
       <select class="select" aria-label="กรองตามความสนใจ">
-        <option value="">ทุกความสนใจ</option>
+        <option value="">สวัสดีครับ</option>
         <option>Frontend</option>
         <option>Data</option>
         <option>Game Dev</option>
